feat: add full tesk
