# backend/doc/swagger/simple_bank.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Simple bank API",
-    "version": "0.1",
+    "version": "0.2",
     "contact": {
       "name": "Mandala",
       "url": "https://github.com/sunmery/simplebank",
@@ -82,6 +82,38 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/simple_bank.LoginUserRequest"
+            }
+          }
+        ],
+        "tags": [
+          "CreateUserService"
+        ]
+      }
+    },
+    "/v1/update_user": {
+      "patch": {
+        "operationId": "CreateUserService_UpdateUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/simple_bank.UpdateUserResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/google.rpc.Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/simple_bank.UpdateUserRequest"
             }
           }
         ],
@@ -178,6 +210,35 @@
         "refreshTokenExpiresAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "simple_bank.UpdateUserRequest": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "fullName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "passwordChangedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "simple_bank.UpdateUserResponse": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/simple_bank.User"
         }
       }
     },
